--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>My Webpage</title>
     </head>
     <body>
-        Hello, world!
+        Does this GitHub Pages thing work for me?
     </body>
 </html>
