--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Webpage</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <title>Finesse Web</title>
     </head>
     <body>
-        Does this GitHub Pages thing work for me?
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    Hey boy
+                </div>
+                <div class="col-3">
+                    Sweet Boy
+                </div>
+                <div class="col-3">
+                    It's Finesse Web
+                </div>
+            </div>
+        </div>
     </body>
 </html>
