--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Finesse Web</title>
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-3">
                     Hey boy
