--- a/sin.html
+++ b/sin.html
@@ -9,10 +9,10 @@
         
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="sin.html">Sin</a>
+                <a class="nav-link active" href="sin.html">Sin</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="lust.html">Lust</a>
@@ -23,8 +23,13 @@
         </ul>
         
         <div class="container-fluid">
-            <h1>Entrance to the dark realm</h1>
-            <p>You've entered a dark realm...my twisted little hellscape on the world wide web</p>
+            <h1>Sin</h1>
+            <ul class="list-group">
+                <li class="list-group-item">Innocence</li>
+                <li class="list-group-item">Youth</li>
+                <li class="list-group-item">Engagement</li>
+                <li class="list-group-item">Marshlands</li>
+            </ul>
         </div>
     </body>
 </html>
